Same as previous commit. fixing overlapping media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,8 +428,8 @@ footer #venue {
 
 }
 
-@media screen and (min-width: 768px) {
-    /* Tablets min_width 768px */
+@media screen and (min-width: 768px) and (max-width: 920px) {
+    /* Tablets min_width 768px to 920px */
 
     #hero {
         width: 100%;
@@ -453,13 +453,15 @@ footer #venue {
     /* Resizing header/nav section */
 
     #home-nav {
-        margin-top: 5px;
+        margin-top: 20px;
         margin-left: 50px;
-        font-size: 70px;
+        font-size: 50px;
+        margin-bottom: 5px;
     }
 
     #about-nav,
     #gigs-nav {
+        margin-top: 70px;
         font-size: 20px;
     }
 
@@ -487,7 +489,7 @@ footer #venue {
 
     .text-intro {               /* Intro Section */
         
-        height: auto;
+        height: 450px;
         margin-top: 18px;
         margin-bottom: 50px;
         padding: 6px;
@@ -504,11 +506,10 @@ footer #venue {
     }
 
     .text-intro-contact {
-        height: auto;
+        height: 290px;
         margin-left: 5%;
         margin-top: 23px;
         margin-bottom: 50px;
-        padding: 6px;
         font-size: 18px;
     }
 
@@ -554,6 +555,11 @@ footer #venue {
 
 /* Resizing gigs page */
 
+    .gig-guide {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    
     .gig-green, .gig-orange {
         height: 140px;
         font-size: x-large;
@@ -614,8 +620,6 @@ footer #venue {
     }
 
     #about-nav {
-        
-        
         display: block;
         margin-top: 50px;
         font-size: 30px;
@@ -627,7 +631,6 @@ footer #venue {
     .text-over-hero {
         position: relative;
         right: 700px;
-        
         top: 60px;
         width: 320px;
     }
